# hdfv

./: .gitignore  CLAUDE.md  README.md  TODO.md  make_test_data.py  pyproject.toml
src/hdfv/: cli.py  histogram_videos.py  images.py
tests/: conftest.py  test_cli.py  test_hdfv.py  test_histogram_videos.py  test_images.py
