[project]
name = "hdfv"
version = "0.1.0"
description = "View for hdf5 files"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "h5py",
  "numpy",
  "typer",
  "rich",
  "tqdm",
  "matplotlib",
  "imageio",
  "hdfx @ git+ssh://git@github.com/Algopaul/hdfx.git"
]

[project.scripts]
hdfv = "hdfv.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
