[project]
name = "hdfv"
version = "0.1.0"
description = "View for hdf5 files"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "h5py",
  "numpy",
  "typer",
  "rich",
  "tqdm",
  "matplotlib",
  "imageio",
  "hdfx @ git+ssh://git@github.com/Algopaul/hdfx.git",
  "zarr (>=3.1.5,<4.0.0)"
]

[project.scripts]
hdfv = "hdfv.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]
